--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Nikhil Patil">Nikhil Patil</h1>
 
-          <p class="title">Cloud & Devops Engineer</p>
+          <p class="title">Cloud Engineer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
